reset availability button correctly aligned

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -356,7 +356,8 @@
 
 #inventory-add-button,
 #multiple-add-button,
-#multiple-edit-button {
+#multiple-edit-button,
+#reset-availability-button {
   font-size: 60%; 
   font-weight: normal; 
   float: right; 
